# weams

./: .gitignore  README.md  cloudbuild.yaml
.agents/skills/bi_engineer/: SKILL.md
.agents/skills/data_engineer/: SKILL.md
.agents/skills/devops/: SKILL.md
.agents/skills/investigator/: SKILL.md
.agents/skills/product_owner/: SKILL.md
.agents/skills/solutions_architect/: SKILL.md
docs/: product_brief.md
docs/architecture/: engineering_brief.md  extractor-bronze-c4.md
docs/dashboards/: looker_studio_spec.md
docs/stories/: epic-1-ingesta-raw.md  epic-2-transformacion.md  epic-3-exposicion.md  tech-debt-1-extractor.md
landing-zone/2026/03/25/archivos/: e2e_test_report_epic3.md  java_architecture_ai_integration_2026.json  java_ecosystem_report_2026.md  java_salary_guide_2026.xml  java_skills_demand_2026.txt  market_trends.csv  roles_and_requirements.json
src/: .env.example  .gitignore  pyproject.toml  requirements.txt
src/dags/: bronze_ingestion_dag.py  silver_gold_pipeline_dag.py
src/extractors/: bronze_extractor.py
src/sql/: gold_skills_demand.sql
src/tests/: test_main.py
src/transformers/: bronze_to_silver.py
terraform/: bigquery.tf  composer.tf  iam.tf  storage.tf  variables.tf
